First commit of the project

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,72 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header-content">
       <!-- Some kind of logo and navbar -->
+      <!-- <img class="technigo-logo" src="./logo.svg" alt="technigo logotype" /> -->
+      <div class="fox-logo">
+        <img class="header-logo" src="./foxlogo.svg" alt="team foxes logotype" />
+        <h1>FOX NEWS</h1>
+      </div>
+      <nav class="navigation">
+        <a href="#">First menu item</a>
+        <a href="#">Second menu item</a>
+      </nav>
     </header>
 
-    <section class="big-news">
+    <section class="big-news-container">
       <!-- The big news content -->
+      <img class="big-news-img" src="./wired_pic.png" alt="illustration by Elena Lacey" />
+      <div class="big-news-text">
+        <h2>Open Source Fonts Are <span class="word-color-change">Love Letters</span> to the Design Community</h2>
+        <p>FONT FAMILIES CAN sell for hundreds of dollars. Gotham, a popular typeface used by President Barack Obama’s campaign and many others, costs nearly $1,000 to license a complete set of 66 different styles. But The League of Moveable Type, gives all of its fonts away for free. What's more, it makes them open source, so that other people can modify the fonts and make their own versions of them.</p>
+        <a class="big-news-link" href="https://www.wired.com/story/open-source-fonts-love-letters-design-community/"> Read all about it on WIRED </a>
+      </div>
     </section>
 
-    <section class="">
+    <section class="small-news-container">
       <!-- The other news  -->
+      <div class="small-news-item"> 
+        <img class="small-news-img" src="./1.png" alt="#"/>
+        <h3 class="small-news-text">This is the small news heading</h3>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-img" src="./2.png" alt="#" />
+        <h3>This is the small news heading</h3>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-img" src="./3.png" alt="#" />
+        <h3>This is the small news heading</h3>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-img" src="./4.png" alt="#" />
+        <h3>This is the small news heading</h3>
+      </div>
+      <div class="small-news-item"> 
+        <img class="small-news-img" src="./1.png" alt="#"/>
+        <h3 class="small-news-text">This is the small news heading</h3>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-img" src="./2.png" alt="#" />
+        <h3>This is the small news heading</h3>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-img" src="./3.png" alt="#" />
+        <h3>This is the small news heading</h3>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-img" src="./4.png" alt="#" />
+        <h3>This is the small news heading</h3>
+      </div>
     </section>
   </body>
+
+    <div class="footer">
+      <img class="technigo-logo" src="./logo.svg" alt="technigo-logo">
+    </div>
+
 </html>
