--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,7 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+    <!--test-->
     <header>
       <!-- Some kind of logo and navbar -->
       <a class="logo" href="#small-news-section"><img src="./img/apple.svg" alt="apple-logo" /></a>
