--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,93 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="https://picsum.photos/10/10">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav> 
+        <img class="logo" src="https://picsum.photos/100/100" alt="logo"/>
+        <h1 class="site-name">The News Site</h1>
+        <div class ="navigation" id="navigation-id">
+          <ul>
+            <li><a href="#">Big News</a></li>
+            <li><a href="#">Small News</a></li>
+            <li><a href="#">Archive</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <img class="big-news-picture" src="https://picsum.photos/400/400" alt="big news"/>
+      <div class="big-news-text-block">
+        <h2 class="big-news-title">The Biggest News Right Now</h2>  
+        <p class="big-news-text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit recusandae libero est, suscipit hic omnis quam iure expedita asperiores pariatur voluptatibus soluta. Dolorem aut sapiente culpa, dolore id architecto, facilis dicta animi cupiditate maiores facere unde inventore in ducimus, cumque nam vero corrupti. Tempora cupiditate cum numquam sit quas consequuntur!
+        </p>
+      </div>  
     </section>
 
-    <section class="">
+    <section class="small-news">
       <!-- The other news  -->
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/200" alt="small news">
+        <h3 class="small-news-title">Small News 1</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/201" alt="small news">
+        <h3 class="small-news-title">Small News 2</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/202" alt="small news">
+        <h3 class="small-news-title">Small News 3</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/203" alt="small news">
+        <h3 class="small-news-title">Small News 4</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/204" alt="small news">
+        <h3 class="small-news-title">Small News 5</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/205" alt="small news">
+        <h3 class="small-news-title">Small News 6</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
+      <div class="small-news-card">
+        <img class="small-news-picture" src="https://picsum.photos/200/206" alt="small news">
+        <h3 class="small-news-title">Small News 7</h2>
+        <p class="small-news-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, assumenda.
+        </p>
+      </div>
     </section>
+
   </body>
 </html>
