added <article> and <footer>

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
         <h1>A fjord with no name</h1>
       </div>
       <nav>
-        <a href="#">About</a>
+        <a href="#">Contact</a>
         <a href="#">Blog</a>
         <a href="#">Outdoor</a>
         <a href="#">Contact</a>
@@ -27,36 +27,56 @@
 
     <section class="big-news">
       <!-- The big news content -->
-      <img class="big-news-image" src="./image/window_ brian-walker.jpg" alt="windowview of a northern lake" />
-      <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <article class="big-news-article">
+        <img class="big-news-image" src="./image/window_ brian-walker.jpg" alt="windowview of a northern lake" />
+        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </article>
     </section>
 
     <section class="other-news">
       <!-- The other news  -->
-      <img class="other-news-image" src="./image/apples-fanny-gustafsson.jpg" alt="four apples lying on the ground" />
-      <p class="other-news-text">An apple a day...</p>
-      <img class="other-news-image" src="./image/meadow-anne-nygard.jpg" alt="a meadow in late summer" />
-      <p class="other-news-text">Lorem ipsum dolor...</p>
-      <img class="other-news-image" src="./image/flower-elisa-h.jpg" alt="closup of a white flower in natural habitat" />
-      <p class="other-news-text">Lorem ipsum dolor...</p>
-      <img class="other-news-image" src="./image/fire-isi-parente.jpg" alt="bonfire in a dark night" />
-      <p class="other-news-text">Lorem ipsum dolor...</p>
-      <img class="other-news-image" src="./image/lilacflower-may-marketing.jpg" alt="closeup of lilac flowers in natural habitat" />
-      <p class="other-news-text">Lorem ipsum dolor...</p>
-      <img class="other-news-image" src="./image/Raspberry-amanda-hortiz.jpg" alt="closup of a twig with blackberries" />
-      <p class="other-news-text">Lorem ipsum dolor...</p>
-      <img class="other-news-image" src="./image/mushrooms-andrew-ridley.jpg" alt="different sorts of mushrooms lying next to each other" />
-      <p class="other-news-text">Tasty treasures...</p>
+      <article class="apples-article">
+        <img class="other-news-image" src="./image/apples-fanny-gustafsson.jpg" alt="four apples lying on the ground" />
+        <p class="other-news-text">An apple a day...</p>
+      </article>
+      <article class="meadow-article">
+        <img class="other-news-image" src="./image/meadow-anne-nygard.jpg" alt="a meadow in late summer" />
+        <p class="other-news-text">Lorem ipsum dolor...</p>
+      </article>
+      <article class="flower-article">
+        <img class="other-news-image" src="./image/flower-elisa-h.jpg" alt="closup of a white flower in natural habitat" />
+        <p class="other-news-text">Lorem ipsum dolor...</p>
+      </article>
+      <article class="fire-article">
+        <img class="other-news-image" src="./image/fire-isi-parente.jpg" alt="bonfire in a dark night" />
+        <p class="other-news-text">Lorem ipsum dolor...</p>
+      </article>
+      <article class="lilac-flowers-article">
+        <img class="other-news-image" src="./image/lilacflower-may-marketing.jpg" alt="closeup of lilac flowers in natural habitat" />
+        <p class="other-news-text">Lorem ipsum dolor...</p>
+      </article>
+      <article class="blackberry-article">
+        <img class="other-news-image" src="./image/Raspberry-amanda-hortiz.jpg" alt="closup of a twig with blackberries" />
+        <p class="other-news-text">Lorem ipsum dolor...</p>
+      </article>
+      <article class="mushrooms-article">
+        <img class="other-news-image" src="./image/mushrooms-andrew-ridley.jpg" alt="different sorts of mushrooms lying next to each other" />
+        <p class="other-news-text">Tasty treasures...</p>
+      </article>
     </section>
 
-    <section class="about">
+    <section class="contact">
       <div class="sm-icons">
         <a href="https://github.com/nehrwein" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://codepen.io/BumBumBurka" target="_blank"><i class="fab fa-codepen"></i></a>
         <a href="https://www.linkedin.com/in/birgit-nehrwein-9b4656194/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.facebook.com/birgit.nehrwein.7/" target="_blank"><i class="fab fa-facebook"></i></a> 
       </div>
-      <p class="about-paragraph">Get in contact! :)</p>
+      <p class="contact-paragraph">Get in contact! :)</p>
     </section>
+
+    <footer>
+      <p class="footer-text">© 2021 Birgit Nehrwein</p>
+    </footer>
   </body>
 </html>
