changed the pictures and text in the news cards

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="contact">
-            <a href="#bottom" > <h5>contact us</h5> </a>
+            <a href="#bottom"> <h5>contact us</h5> </a>
         </div>
     </section>  
 
@@ -71,31 +71,31 @@
   <!--navbar with five links. Put # in order to target it later on-->
   <nav class="navbar">
     <div class="link">
-        <a href="#top" > <h5>Home</h5> </a>
+        <a href="#top"> <h5>Home</h5> </a>
     </div>
     <div class="link">
-        <a href="#business" > <h5>Business</h5> </a>
+        <a href="#business"> <h5>Business</h5> </a>
     </div>
     <div class="link">
-        <a href="#tech" > <h5>Tech</h5> </a>
+        <a href="#tech"> <h5>Tech</h5> </a>
     </div>
     <div class="link">
         <a href="#health"> <h5>Health</h5> </a>
     </div>
     <div class="link">
-        <a href="#sports" > <h5>Sports</h5> </a>
+        <a href="#sports"> <h5>Sports</h5> </a>
     </div>
   </nav>
 
   <!--first news row with one picture and some text-->
   <article class="all-news">
     <div class="big-news">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./corona.jpg" alt="image of coronavirus">
     </div>
     <div class="big-news" id="health"> <!--put an id so we can target it from navbar-->
         <h3>Health</h3> 
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>Breaking news: Coronavirus has miraculously disappeared ?</h2>
+        <h3>As Trump has predicted...</h3>
     </div>
   </article>
 
@@ -104,46 +104,46 @@
   <!--other all-news with seven news card, each of them is put in to a div called other-news-->
   <article class="all-news">
     <div class="other-news">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./hospital.jpg" alt="image of a hospital">
         <h3>Health</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>News Magazine's Health Systems declare state of emergency</h2>
+        <h3>Hospital director...</h3>
     </div>
     <div class="other-news" id="tech">
         <img src="./robot.jpg" alt="image of robots on the moon">
         <h3>Tech</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>Tesla's building a robot</h2>
+        <h3>Elon Musk...</h3>
     </div>
     <div class="other-news">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./tech-news.jpg" alt="image of the word Tech News">
         <h3>Tech</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>Today Tech news updates</h2>
+        <h3>See our daily Tech news updates...</h3>
     </div>
     <div class="other-news" id="business">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./cryptocurrency.jpg" alt="image of cryptocurrency">
         <h3>Business</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>The future of Cryptocurrency</h2>
+        <h3>The Cryptocurrency is taking off around the world. Predictions...</h3>
     </div>
     <div class="other-news">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./ikea.jpg" alt="image of an Ikea store">
         <h3>Business</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>IKEA attempts to draw in more consumers with their new business strategy</h2>
+        <h3>The CEO of Ikea Group ...</h3>
     </div>
     <div class="other-news" id="sports">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./tokyo.jpg" alt="image of the word Tokyo">
         <h3>Sports</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>Olympics Games Tokyo 2020: Best moments</h2>
+        <h3>See the best moments of Olympics Games 2020...</h3>
     </div>
     <div class="other-news">
-        <img src="./robot.jpg" alt="image of robots on the moon">
+        <img src="./sports.png" alt="image of athletes">
         <h3>Sports</h3>
-        <h2> Lorem Ipsum </h2>
-        <h3>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h3>
+        <h2>This week's biggest sports news</h2>
+        <h3>What you need to know...</h3>
     </div>
   </article>
 
